tests/baselines/reference/moduleAssignmentCompat2.errors.txt
==== tests/cases/compiler/moduleAssignmentCompat2.ts (2 errors) ====
    module A {
        export class C { }
    }
    module B {
        export class C { }
        export class D { }
    }
    
    var a: A;
           ~
!!! error TS4022: Type reference cannot refer to container 'A'.
    var b: B;
           ~
!!! error TS4022: Type reference cannot refer to container 'B'.
    
    a = b;
    b = a; // error